--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       
     <!-- Custom styles for this template -->
-        <link href="stylesheets/myStyle.css" type ="text/css" rel="stylesheet"> 
+        <link href="main.css" type ="text/css" rel="stylesheet"> 
         
     <!-- Javascript --> 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
