--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id = "links" class = "center-div">
             <button onclick=" window.open('https://github.com/IshabulHQ','_blank')"
                 class ="button--link"> Github </button>
-            <button onclick=" window.open('resume.pdf','_blank')" id = "button--resume" class ="button--link" > 
+            <button onclick=" window.open('Resume_1.pdf','_blank')" id = "button--resume" class ="button--link" > 
                 Resume </button>
              <button onclick=" window.open('https://www.linkedin.com/in/ishabul-haque/','_blank')" 
                 id = "button--linkedln" class ="button--link" > Linkedln </button>
